--- a/project_2/stylesheet/step_page_stylesheet.css
+++ b/project_2/stylesheet/step_page_stylesheet.css
@@ -1,13 +1,17 @@
 body{
     margin: 0;
     font-size: 2em;
-    width: 1440px;
     font-family: 'Times New Roman', Times, serif;
+    width: 100%;
+}
+main{
+    width: 1440px;
+    margin: auto;
 }
 nav{
-    background-color: #A699FF;
+    margin: auto;
     padding: 20px 10%;
-    width: 80%;
+    width: 1440px;
 }
 nav ul{
     margin: 0;
@@ -16,14 +20,14 @@ nav ul{
 nav li{
     list-style-type: none;
     display: inline-block;
+    padding-left: 10px;
 }
 .row{
     display: flex;
     flex-basis: 100%;
     width: 80%;
     margin: auto;
-    margin-bottom: 20px;
-    
+    margin-bottom: 20px;   
 }
 .half{
     padding: 0 25px 0 0;
@@ -39,12 +43,12 @@ h1{
     width: 80%;
     margin: auto;
     padding: 20px 0;
-    font-style: 60px;
+    font-size: 60px;
     font-family: gabriela;
     font-weight: 100;
 }
 @media (max-width:1440px){
-    main{
+    body{
         width: 1440px;
     }
 }
@@ -54,17 +58,28 @@ h1{
 }
 .stepnumber{
     width: 1.5em;
-    padding: 0
-    ;
+    padding: 0;
 }
 .logo{
     width: 10em;
+    padding-right: 195px;
 }
 h2{
     margin: 0;
     color: #3F328A;
+    font-size: 40px;
  }
 .button{
     width: 50%;
     float: right;
+    background-color: #A699FF;
+    padding: 10px;
+    border-radius: 15px;
+}
+.gray{
+    filter: grayscale(100%);
+}
+.bar{
+    width: 100%;
+    background-color: #A699FF;
 }
